# repo-radar

./: .gitignore  AGENTS.md  CHANGELOG.md  DEVELOPMENT.md  LICENSE  MIGRATING.md  README.md  VERSION  pyproject.toml  release.sh  repo-radar  requirements.txt
menubar/: SETUP.md  main.js  package-lock.json  package.json  preload.js  restart.sh
menubar/assets/: create-animated-icons.js  create-app-icon.js  create-dev-app-icon.js  create-dev-icons.js  create-hires-icon.js  create-icns.js  create-icons.js  create-icons.sh  create-purple-icon.js  icon-dev.icns  icon.icns
menubar/renderer/: error.html  index.html  renderer.js  settings.css  settings.html  settings.js  styles.css
menubar/resources/: repo-radar  setup.sh
menubar/scripts/: build-with-version.js  create-installer.js
repo_radar/: __init__.py  __main__.py  cli.py  config.py  constants.py  dependencies.py  files.py  git.py  llm.py  metadata.py  ui.py
repo_radar/modes/: analyze.py  clean.py  configure.py  sync.py
repo_radar/tests/: test_config.py  test_constants.py  test_files.py  test_git.py  test_llm.py  test_metadata.py  test_modes.py  test_ui.py
